[gd_scene load_steps=3 format=3 uid="uid://bhie7y7tubaji"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_acn1x"]
[ext_resource type="FontFile" uid="uid://bghl5uwdrhy5u" path="res://joystix monospace.otf" id="1_fruhl"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_acn1x")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="new_game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fruhl")
text = "new game"
flat = true

[node name="continue" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fruhl")
text = "continue"
flat = true

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_fruhl")
text = "quit game"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
